# equivariant-imaging

./: .gitignore  README.md  setup.cfg
data/matrices/: cs_64x256.pt
src/equivariant_imaging.egg-info/: PKG-INFO
src/equivariant_imaging/models/: bottleneck.py  conv_block.py  downsampling.py  model.py  unet.py  upsampling.py
src/equivariant_imaging/physics/: cs.py
src/equivariant_imaging/transforms/: random_shift.py
tests/: test_conv_block.py  test_downsampling.py  test_unet.py  test_upsampling.py
